# Logs-Analyzer

./: .gitignore  CMakeLists.txt  README.md  sonia.txt
lib/: CMakeLists.txt  arg_parcer.cpp  arg_parcer.h  error_processor.cpp  error_processor.h  local_time_parcer.cpp  local_time_parcer.h  log_parcer.cpp  log_parcer.h  log_processor.cpp  log_processor.h  month_to_days.cpp  month_to_days.h  month_to_num.cpp  month_to_num.h  my_structs.cpp  my_structs.h  perror2.cpp  perror2.h  stats_viewer.cpp  stats_viewer.h  strcmp2.cpp  strcmp2.h  string_concatenator.cpp  string_concatenator.h  string_to_int.cpp  string_to_int.h  strlen2.cpp  strlen2.h  validator.cpp  validator.h
